--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Top Oss</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .center-image {
+            max-width: 100%;
+            height: auto;
+            height: 75vh;
+        }
+    </style>
 </head>
 <body>
-    
+    <img src="images/image.png" alt="Top Oss Logo" class="center-image">
 </body>
 </html>
