--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
-    <img src="images/image.png" alt="Top Oss Logo" class="center-image">
-    <div class="excel-container">
-        <table id="excel-table"></table>
+    <div class="toggle-container">
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
+    </div>
+    <div class="content-container">
+        <img src="images/image.png" alt="Top Oss Logo" class="center-image">
+        <div class="excel-container">
+            <table id="excel-table"></table>
+        </div>
     </div>
     <script src="js/excel-reader.js"></script>
+    <script src="js/dark-mode.js"></script>
 </body>
 </html>
