--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
     </div>
     <script src="js/excel-reader.js"></script>
     <script src="js/dark-mode.js"></script>
+    <script>
+        window.onload = function() {
+            alert('Wat zijn we weer teleurgesteld in deze toppers');
+        }
+    </script>
 </body>
 </html>
